--- a/DDAYGO/ViewController/My/Lottery/ZP_InstructionBet/ZP_InstructionCell/ZP_InstructionTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_InstructionBet/ZP_InstructionCell/ZP_InstructionTableViewCell.xib
@@ -6,16 +6,17 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="541" id="KGk-i7-Jjw" customClass="ZP_InstructionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="541"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="ZP_InstructionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="540.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="129.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hAT-hn-HhU">
@@ -75,14 +76,152 @@
                             <constraint firstItem="sf5-5s-S8F" firstAttribute="leading" secondItem="KcV-fJ-OPb" secondAttribute="trailing" constant="16" id="ok2-9g-Cn3"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vRz-AH-fKn">
+                        <rect key="frame" x="0.0" y="41" width="49" height="49"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="头奖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pb-wX-mZR">
+                                <rect key="frame" x="7" y="14" width="34" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.66279346449999998" green="0.30408445540000001" blue="0.30464194589999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="49" id="HRb-Xa-7ZH"/>
+                            <constraint firstAttribute="width" constant="49" id="U3H-Un-dXe"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColorFromUIColor">
+                                <color key="value" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ojb-dD-elx">
+                        <rect key="frame" x="48" y="41" width="91" height="49"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="白球5个" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDt-63-zYp">
+                                <rect key="frame" x="24" y="8" width="42" height="15"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" red="1" green="0.68780862929831255" blue="0.086160265141760783" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="+" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beM-f6-ZJe">
+                                <rect key="frame" x="24" y="21" width="42" height="8"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="红球1个" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycn-D1-wke">
+                                <rect key="frame" x="24" y="27" width="42" height="16"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.27739093129999998" green="0.66279346449999998" blue="0.19767321269999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="49" id="IXk-cV-lMI"/>
+                            <constraint firstAttribute="width" constant="91" id="tND-yI-koB"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LxM-3O-lWf">
+                        <rect key="frame" x="139" y="41" width="90" height="49"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="9%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zoL-86-qGj">
+                                <rect key="frame" x="24" y="14" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.68780862929999997" blue="0.086160265139999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="49" id="OZl-Dp-qbO"/>
+                            <constraint firstAttribute="width" constant="90" id="oIC-7L-g1D"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="czZ-xb-LFr">
+                        <rect key="frame" x="229" y="41" width="91" height="49"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xP9-rA-13o">
+                                <rect key="frame" x="24" y="14" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.43519247309999998" green="1" blue="0.30511549609999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="91" id="jWF-D8-vUI"/>
+                            <constraint firstAttribute="height" constant="49" id="rU1-Rv-uUS"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_explan_first" translatesAutoresizingMaskIntoConstraints="NO" id="DqI-I5-sfk">
+                        <rect key="frame" x="9" y="98" width="18" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="S4n-Oh-fHl"/>
+                            <constraint firstAttribute="width" constant="18" id="ny0-9P-JBk"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="賞金菜開獎號碼以美國PowerBall開獎時間為準。網址為 http://www.powerball.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sp4-6M-Kaa">
+                        <rect key="frame" x="35" y="98" width="257" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="1gP-jO-Krk"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="hAT-hn-HhU" secondAttribute="trailing" id="12o-DV-dOP"/>
+                    <constraint firstItem="Sp4-6M-Kaa" firstAttribute="top" secondItem="vRz-AH-fKn" secondAttribute="bottom" constant="8" id="1eg-eP-doK"/>
+                    <constraint firstItem="czZ-xb-LFr" firstAttribute="leading" secondItem="LxM-3O-lWf" secondAttribute="trailing" id="GN0-1w-ya3"/>
+                    <constraint firstItem="Ojb-dD-elx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="32" id="Jvj-Xx-Wpi"/>
+                    <constraint firstItem="vRz-AH-fKn" firstAttribute="top" secondItem="hAT-hn-HhU" secondAttribute="bottom" id="KCg-fb-qxb"/>
+                    <constraint firstItem="DqI-I5-sfk" firstAttribute="top" secondItem="vRz-AH-fKn" secondAttribute="bottom" constant="8" id="MbK-9z-i5T"/>
+                    <constraint firstItem="LxM-3O-lWf" firstAttribute="leading" secondItem="Ojb-dD-elx" secondAttribute="trailing" id="QCA-BR-zY5"/>
                     <constraint firstItem="hAT-hn-HhU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="S6V-Am-h10"/>
+                    <constraint firstItem="vRz-AH-fKn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Sef-KB-Fmq"/>
+                    <constraint firstItem="Ojb-dD-elx" firstAttribute="top" secondItem="hAT-hn-HhU" secondAttribute="bottom" id="XxR-DG-3Gs"/>
+                    <constraint firstItem="czZ-xb-LFr" firstAttribute="top" secondItem="hAT-hn-HhU" secondAttribute="bottom" id="Ycl-Eq-lsG"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Sp4-6M-Kaa" secondAttribute="trailing" constant="12" id="kha-IW-DcI"/>
+                    <constraint firstItem="DqI-I5-sfk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="nc3-f1-fXf"/>
+                    <constraint firstItem="LxM-3O-lWf" firstAttribute="top" secondItem="hAT-hn-HhU" secondAttribute="bottom" id="p5p-Oq-eDu"/>
                     <constraint firstItem="hAT-hn-HhU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="y1v-Cw-EtS"/>
+                    <constraint firstAttribute="trailing" secondItem="czZ-xb-LFr" secondAttribute="trailing" id="yso-da-iz3"/>
+                    <constraint firstItem="Sp4-6M-Kaa" firstAttribute="leading" secondItem="DqI-I5-sfk" secondAttribute="trailing" constant="8" id="z5Z-uP-R5s"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="34" y="302.5"/>
+            <point key="canvasLocation" x="34" y="97"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="icon_explan_first" width="20" height="23"/>
+    </resources>
 </document>
