--- a/DDAYGO/ViewController/My/Lottery/LotteryHomePage/ZP_LotteryCell/ZP_LotteryViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/LotteryHomePage/ZP_LotteryCell/ZP_LotteryViewCell.xib
@@ -11,13 +11,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ZP_LotteryViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="ZP_LotteryViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xAU-vl-aqf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="59" id="8on-S7-bkF"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3N2-wH-zq9">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEU-Vl-MnN">
+                        <rect key="frame" x="0.0" y="60" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Beh-rK-9VM"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="xAU-vl-aqf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="7kS-Yf-gy1"/>
+                    <constraint firstItem="LEU-Vl-MnN" firstAttribute="top" secondItem="xAU-vl-aqf" secondAttribute="bottom" constant="1" id="DV1-sd-rMF"/>
+                    <constraint firstAttribute="trailing" secondItem="LEU-Vl-MnN" secondAttribute="trailing" id="Dk5-l0-BqU"/>
+                    <constraint firstItem="LEU-Vl-MnN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="HC6-u8-tyk"/>
+                    <constraint firstItem="xAU-vl-aqf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HCY-0D-xn6"/>
+                    <constraint firstAttribute="trailing" secondItem="xAU-vl-aqf" secondAttribute="trailing" id="gtF-rR-4ds"/>
+                    <constraint firstItem="xAU-vl-aqf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="pN3-f7-RXZ"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="collectionView" destination="xAU-vl-aqf" id="0mh-GU-nCb"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="62"/>
         </tableViewCell>
     </objects>
 </document>
