--- a/DDAYGO/ViewController/My/StoreManagement/Order/OrderManagement/OrderManagementHomePage/OrderManagerViewController.xib
+++ b/DDAYGO/ViewController/My/StoreManagement/Order/OrderManagement/OrderManagementHomePage/OrderManagerViewController.xib
@@ -35,7 +35,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ur9-C9-BsU">
-                    <rect key="frame" x="0.0" y="64" width="335" height="50"/>
+                    <rect key="frame" x="0.0" y="0.0" width="335" height="50"/>
                     <subviews>
                         <button opaque="NO" tag="100" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Tf-A5-e7u">
                             <rect key="frame" x="0.0" y="0.0" width="67" height="50"/>
@@ -114,7 +114,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" tag="105" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t29-kf-wz2">
-                    <rect key="frame" x="335" y="64" width="40" height="50"/>
+                    <rect key="frame" x="335" y="0.0" width="40" height="50"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="I7m-py-c37"/>
@@ -122,32 +122,32 @@
                     <state key="normal" image="ic_order_more"/>
                 </button>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xoo-SW-6kh">
-                    <rect key="frame" x="0.0" y="114" width="375" height="553"/>
+                    <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NuV-JG-oZw">
-                            <rect key="frame" x="0.0" y="0.0" width="1875" height="553"/>
+                            <rect key="frame" x="0.0" y="0.0" width="1875" height="617"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_order_noorder@2x" translatesAutoresizingMaskIntoConstraints="NO" id="d5r-GC-ayT">
-                                    <rect key="frame" x="137.5" y="226.5" width="100" height="100"/>
+                                    <rect key="frame" x="137.5" y="258.5" width="100" height="100"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="100" id="LBI-as-Q1n"/>
                                         <constraint firstAttribute="width" constant="100" id="MVw-vV-cdc"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="还没有相关订单" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlH-aO-tSu">
-                                    <rect key="frame" x="127" y="356.5" width="121.5" height="21"/>
+                                    <rect key="frame" x="127" y="388.5" width="121.5" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="可以看看其他订单" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ddb-PN-kOd">
-                                    <rect key="frame" x="126.5" y="382.5" width="122.5" height="18"/>
+                                    <rect key="frame" x="126.5" y="414.5" width="122.5" height="18"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="mCG-dx-Kdk">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="553"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="IOq-Lf-b99">
                                         <size key="itemSize" width="50" height="50"/>
@@ -161,7 +161,7 @@
                                     </connections>
                                 </collectionView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="cEc-Ni-NKv">
-                                    <rect key="frame" x="375" y="0.0" width="375" height="553"/>
+                                    <rect key="frame" x="375" y="0.0" width="375" height="617"/>
                                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="fPJ-Tu-DxA">
                                         <size key="itemSize" width="50" height="50"/>
@@ -175,7 +175,7 @@
                                     </connections>
                                 </collectionView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-qz-7fO">
-                                    <rect key="frame" x="750" y="0.0" width="375" height="553"/>
+                                    <rect key="frame" x="750" y="0.0" width="375" height="617"/>
                                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="Gc6-Zd-FFu">
                                         <size key="itemSize" width="50" height="50"/>
@@ -189,7 +189,7 @@
                                     </connections>
                                 </collectionView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="tvf-X0-Uov">
-                                    <rect key="frame" x="1125" y="0.0" width="375" height="553"/>
+                                    <rect key="frame" x="1125" y="0.0" width="375" height="617"/>
                                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="Qpo-eU-Q02">
                                         <size key="itemSize" width="50" height="50"/>
@@ -203,7 +203,7 @@
                                     </connections>
                                 </collectionView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="QEP-ay-45k">
-                                    <rect key="frame" x="1500" y="0.0" width="375" height="553"/>
+                                    <rect key="frame" x="1500" y="0.0" width="375" height="617"/>
                                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="wdh-y3-2A6">
                                         <size key="itemSize" width="50" height="50"/>
@@ -252,12 +252,12 @@
                         <constraint firstItem="NuV-JG-oZw" firstAttribute="centerY" secondItem="Xoo-SW-6kh" secondAttribute="centerY" id="JU1-VS-ftb"/>
                         <constraint firstItem="NuV-JG-oZw" firstAttribute="leading" secondItem="Xoo-SW-6kh" secondAttribute="leading" id="Nrr-zf-YZJ"/>
                         <constraint firstItem="mCG-dx-Kdk" firstAttribute="width" secondItem="Xoo-SW-6kh" secondAttribute="width" id="acb-nN-dVc"/>
-                        <constraint firstAttribute="trailing" secondItem="NuV-JG-oZw" secondAttribute="trailing" id="dOU-99-z0B"/>
+                        <constraint firstAttribute="trailing" secondItem="NuV-JG-oZw" secondAttribute="trailing" constant="-1500" id="dOU-99-z0B"/>
                         <constraint firstItem="NuV-JG-oZw" firstAttribute="top" secondItem="Xoo-SW-6kh" secondAttribute="top" id="wtT-HV-rcp"/>
                     </constraints>
                 </scrollView>
                 <view hidden="YES" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="54b-Wu-hxZ" colorLabel="IBBuiltInLabel-Gray">
-                    <rect key="frame" x="299" y="114" width="76" height="102"/>
+                    <rect key="frame" x="299" y="50" width="76" height="102"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rnJ-nk-DSX">
                             <rect key="frame" x="0.0" y="0.0" width="76" height="40"/>
@@ -300,9 +300,9 @@
                 <constraint firstAttribute="trailing" secondItem="Xoo-SW-6kh" secondAttribute="trailing" id="JVz-lz-4HN"/>
                 <constraint firstAttribute="trailing" secondItem="t29-kf-wz2" secondAttribute="trailing" id="KpX-37-dU6"/>
                 <constraint firstItem="Xoo-SW-6kh" firstAttribute="top" secondItem="t29-kf-wz2" secondAttribute="bottom" id="LV8-QM-489"/>
-                <constraint firstItem="Ur9-C9-BsU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="SJv-QB-WLq"/>
+                <constraint firstItem="Ur9-C9-BsU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="SJv-QB-WLq"/>
                 <constraint firstAttribute="trailing" secondItem="Ur9-C9-BsU" secondAttribute="trailing" constant="40" id="Z07-IL-GLo"/>
-                <constraint firstItem="t29-kf-wz2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="jI0-Sj-Qtr"/>
+                <constraint firstItem="t29-kf-wz2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jI0-Sj-Qtr"/>
                 <constraint firstAttribute="trailing" secondItem="54b-Wu-hxZ" secondAttribute="trailing" id="lSY-lr-bjJ"/>
                 <constraint firstItem="54b-Wu-hxZ" firstAttribute="top" secondItem="t29-kf-wz2" secondAttribute="bottom" id="oSv-MB-3xP"/>
             </constraints>
